Resolved defect #697299 where continue form with blank fields would cause alignment issues from the appearance of validation messages

--- a/webroot/skin/frontend/base/default/css/blueacorn-best-practice.css
+++ b/webroot/skin/frontend/base/default/css/blueacorn-best-practice.css
@@ -297,3 +297,6 @@ body.checkout-onepage-index #checkoutSteps div[id$="-progress-opcheckout"] {
   vertical-align: top; }
 
 /*# sourceMappingURL=blueacorn-best-practice.css.map */
+
+.name-lastname { clear: both; }
+.form-list li.control { clear: both; }
